--- a/.github/workflows/signin.yml
+++ b/.github/workflows/signin.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: ImYrS/aliyun-auto-signin@main
         with:
           REFRESH_TOKENS: ${{ secrets.REFRESH_TOKENS }}
-          # GP_TOKEN: ${{ secrets.GP_TOKEN}}
+          GP_TOKEN: ${{ secrets.GP_TOKEN}}
           PUSH_TYPES: ''
           DO_NOT_REWARD: 'true'
           SERVERCHAN_SEND_KEY: ${{ secrets.SERVERCHAN_SEND_KEY }}
